style/layout/_header.scss
.header {
  display: flex;
  flex-direction: column;
  gap: 8px;
  @include respond(tab-port) {
    flex-direction: row;
    gap: 24px;
  }
  &__left {
    max-width: 722px;
    width: 100%;
    display: flex;
    justify-content: start;
  }
  &__search {
    width: 100%;
    border-radius: 100px;
    padding: 20px;
    height: 54px;
    background-color: $color-white;
    display: flex;
    gap: 10px;
    justify-content: center;
    align-items: center;
    @include respond(tab-port) {
      height: 64px;
    }
    &-icon {
      width: 24px;
      height: 24px;
    }
    &-input {
      width: 90%;
      height: 36px;
      border: none;
      padding: 0.5rem;
      color: #667085;
      &:focus {
        outline: none;
      }
    }
  }
  &__right {
    position: fixed;
    bottom: 0px;
    z-index: 10;
    width: 100%;
    height: 64px;
    padding: 8px;
    background-color: $color-white;
    @include flexbox(space-evenly, center, 10px, row);
    @include respond(tab-port) {
      justify-content: center;
      margin-top: 0;
    }

    @include respond(tab-port) {
      position: static;
      border-radius: 100px;
      max-width: 350px;
    }
  }
  &__action {
    &-box {
      max-width: 66px;
      width: 100%;
      height: 48px;
      padding: 12px;
      border: 1px solid #dedede;
      border-radius: 100px;
      @include flexbox(center, center);
    }
  }
  &__profile {
    max-width: 182px;
    width: 100%;
    height: 48px;
    @include flexbox(center, center, 10px, row);
    &-out-circle {
      width: 48px;
      height: 48px;
      border-radius: 50%;
      border: 1px solid #dedede;
      @include flexbox(center, center);
    }
    &-in-circle {
      width: 45px;
      height: 45px;
      border-radius: 50%;
      background-color: rgba(17, 17, 17, 0.2);
      @include flexbox(center, center);
    }
  }
}

